--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login Dockerhub
-        env:
-          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build -t api-pipeline-v2 .
+        run: docker build -t angelTG-dev/api-pipeline-v2 .
 
-      - name: Push to Dockerhub
+      - name: Push to DockerHub
         run: docker push angelTG-dev/api-pipeline-v2:latest
